# basepop-gtk-theme

./: Makefile.am  README.md  configure.ac
basepop-gtk-theme/gtk-3.0/: gtk-widgets-assets-dark.css
basepop-gtk-theme/gtk-3.0/apps/: unity.css
basepop-gtk-theme/gtk-3.0/widgets/: csd.css
basepop-light-gtk-theme/: index.theme
basepop-light-gtk-theme/gtk-3.0/: gtk-widgets-assets.css
basepop-light-gtk-theme/gtk-3.0/apps/: unity.css
